add scenario endpoints
